--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,9 @@ html {
     box-sizing: border-box;
 }
 
-body {
+body h1 {
     margin: 0;
     min-height: 100vh;
     background-color: coral;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
